objects/Shipping_Detail__c.object
<CustomObject>
    <description>This Object comprises of all the fields which are related to shipment process.</description>
    <fields>
        <fullName>APOE_Genotype__c</fullName>
        <label>APOE Genotype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>Apoe_Clia__c</fullName>
        <label>Apoe Clia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apoe_Imputed__c</fullName>
        <label>Apoe Imputed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apoe_Taqman__c</fullName>
        <label>Apoe Taqman</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barcode__c</fullName>
        <formula>IF(DATEVALUE(CreatedDate) &lt; DATEVALUE( &quot;2022-09-01&quot; ), &apos;SM&apos;+ MID( Id ,10,2)+ &apos;BA&apos;+RIGHT(Id,4)+&apos;CD&apos;,   Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Barcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field has a mandatory lookup to ResearchCampaign object.</description>
        <label>Campaign</label>
        <referenceTo>Research_Campaign__c</referenceTo>
        <relationshipLabel>Shipping Details</relationshipLabel>
        <relationshipName>Shipping_Details</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Firstname__c</fullName>
        <formula>Contact_Id__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Firstname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A mandatory look up field to contact so that every shipment has a contact linked to it.</description>
        <label>Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipping Details</relationshipLabel>
        <relationshipName>Shipping_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <formula>TEXT(Contact_Id__r.Language__c )</formula>
        <label>Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>This field shows the price of each shipment.</description>
        <label>Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QR_Code__c</fullName>
        <formula>IF( Campaign__r.Name == &apos;Bean Game&apos;,(IF( ISPICKVAL(Contact_Id__r.Language__c,&apos;English&apos;), $Label.Community_Url + &quot;/s/add-beangame?participantcode=&quot; +  Contact_Id__r.ParticipantCode__c, $Label.Community_Url_Spanish + &quot;/s/adic/juegofrijol?participantcode=&quot; +  Contact_Id__r.ParticipantCode__c)),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Status_Code__c</fullName>
        <description>This field will contain the Event code returned by USPS Track API. it will hold the value for the packet which is returned by participant.</description>
        <label>Return Status Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Status__c</fullName>
        <description>This field will contain the StatusCategory returned by USPS Track API. This is created to track return status of the packet.</description>
        <label>Return Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Track_Summary__c</fullName>
        <description>This field will hold the return tracking summary provided by USPS track API.</description>
        <label>Return Track Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return_TrackingId__c</fullName>
        <description>This Id consists of returning track id</description>
        <label>Return TrackingId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <formula>TEXT(Contact_Id__r.Sex__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sex</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Received_Date__c</fullName>
        <description>This field defines the date on which shipment was received.</description>
        <label>Shipment Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment_Sent_Date__c</fullName>
        <description>This field defines the date on which shipment was sent to participant.</description>
        <label>Shipment Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment_Status__c</fullName>
        <description>This field is used to track whether the shipment is created, sent to the participant or received by the Mindcrowd team.</description>
        <label>Shipment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consented</fullName>
                    <default>true</default>
                    <label>Consented</label>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Invalid Address</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <formula>Contact_Id__r.MailingStreet &amp;&quot;,&quot;&amp; Contact_Id__r.MailingCity &amp;&quot;,&quot;&amp; Contact_Id__r.MailingState &amp;&quot;,&quot;&amp; Contact_Id__r.MailingCountry&amp;&quot;,&quot;&amp; Contact_Id__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_Shipment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>It is set to true for all the shipments which needs to be tracked.</description>
        <label>Track Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Track_Summary__c</fullName>
        <description>This field will store the StatusSummary returned by USPS Tracking API. It will tell us where the packet is located along with other info like date and time in a single line.</description>
        <label>Track Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tracking_Id__c</fullName>
        <description>This field comprises of the tracking number provided by USPS for tracking the shipments</description>
        <label>Tracking Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USPSLabelImage__c</fullName>
        <description>It contains the label image IN TEXT format returned by USPS Label API</description>
        <label>USPSLabelImage</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USPSReturnLabelImage__c</fullName>
        <description>this field will hold the return label image returned by USPS EVS Label API.</description>
        <label>USPSReturnLabelImage</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USPS_Status_Code__c</fullName>
        <description>This field will contain the EventCode provided by USPS Tracking API.</description>
        <label>USPS Status Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USPS_Status__c</fullName>
        <description>This field will contain the StatusCategory returned by USPS Track API.</description>
        <label>USPS Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>carrierRoute__c</fullName>
        <label>carrierRoute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdc__c</fullName>
        <label>rdc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>returnCarrierRoute__c</fullName>
        <label>returnCarrierRoute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>returnRdc__c</fullName>
        <label>returnRdc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Shipping Detail</label>
    <nameField>
        <displayFormat>SD-{00000000}</displayFormat>
        <label>Shipping Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>